your message describing the changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,6 +51,6 @@
     <canvas id="barChart" width="800" height="300"></canvas>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/static/script.js"></script>
 </body>
 </html>
